--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -1,8 +1,63 @@
  .footer-container {
      width: 483px;
      text-align: center;
+     gap: 15px;
+     margin: auto;
+ }
+
+ .footer-message {
+     color: #4731D3;
+     font-family: Inter;
+     font-size: 48px;
+     font-style: normal;
+     font-weight: 700;
+     line-height: 72px;
 
  }
+
+ .footer-text {
+     color: #120B39;
+     text-align: center;
+     font-family: Inter;
+     font-size: 24px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 150%;
+
+ }
+
+ .footer-container a {
+     color: #4731D3;
+     font-family: Inter;
+     font-size: 20px;
+     font-style: normal;
+     font-weight: 500;
+     line-height: normal;
+     letter-spacing: 1px;
+     text-decoration-line: underline;
+ }
+
+ .img-area img {
+     width: 35px;
+     height: 35px;
+
+ }
+
+ .img-area {
+     display: flex;
+     gap: 25px;
+     justify-content: center;
+     margin-top: 20px;
+ }
+
+
+ /* .footer-container {
+     width: 483px;
+     text-align: center;
+     margin: auto;
+
+
+ } */
 
  /*
 
