--- a/src/layout/Projects.css
+++ b/src/layout/Projects.css
@@ -4,7 +4,66 @@
 
 .project-container {
     display: flex;
-    margin-bottom: 25px;
+    gap: 25px;
+    flex-direction: column;
+
+
+}
+
+.name {
+    color: var(--default-indigo-700, #4338CA);
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+}
+
+.description {
+    color: #383838;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 125%;
+}
+
+.btn-area button {
+    display: flex;
+    padding: 8px 18px 9px 18px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 23px;
+    background: #4731D3;
+    color: white;
+}
+
+
+.project-container .photos {
+    width: 360px;
+}
+
+.text-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 24px 32px;
+
+}
+
+/* .text-area {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 25px;
+    margin: 24px 32px;
+    padding: 32px;
+} */
+
+.content {
+    display: flex;
 }
 
 .project-text {
