--- a/src/layout/Profile.css
+++ b/src/layout/Profile.css
@@ -66,7 +66,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-
     letter-spacing: 0.16px;
 }
 
@@ -96,6 +95,8 @@
     margin-left: 30px;
 }
 
+
+
 .about-text {
     color: #FFF;
 
@@ -104,6 +105,14 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
+
+}
+
+
+
+.profiles {
+    background-color: #4731D3;
+    padding: 50px 0;
 }
 
 
