--- a/src/layout/Projects.css
+++ b/src/layout/Projects.css
@@ -29,6 +29,16 @@
     line-height: 125%;
 }
 
+.about-text p {
+    display: block;
+    margin: 25px 0;
+}
+
+.projectsss {
+    background: #CBF281;
+    padding: 50px 0;
+}
+
 .btn-area button {
     display: flex;
     padding: 8px 18px 9px 18px;
@@ -39,6 +49,10 @@
     color: white;
 }
 
+.btn-area {
+    display: flex;
+    column-gap: 10px;
+}
 
 .project-container .photos {
     width: 360px;
@@ -86,7 +100,7 @@
 
 .nav-area {
     display: flex;
-    gap: 75px;
+    gap: 45px;
 }
 
 .project-h2 {
